--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ function truncateText(text: string, maxLength: number) {
                 {
                     contributors.map((data) => (
                         <a
-                            href={`/${data.contributor}`}
+                            href={`${import.meta.env.BASE_URL}/${data.contributor}`}
                             class="block p-6 bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-lg transition-shadow relative"
                         >
                             <div class="absolute top-4 right-4 bg-blue-100 dark:bg-blue-900 text-blue-800 dark:text-blue-200 px-3 py-1 rounded-full text-sm font-semibold">
